# fuckoff_shutdown

./: README.md  pyproject.toml
fuckoff_shutdown/: __main__.py
