[tool.poetry]
name = "fuckoff-shutdown"
version = "0.2.0"
description = ""
authors = ["megahomyak <g.megahomyak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fuckoff = "^0.2.0"
cross-platform-shutdown = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
